--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+        <!-- black header contain social icon -->
+        <div class="black-head">
+            <ul>
+                <li><img src="./images//facebook-brands.svg" alt=""></li>
+                <li><img src="./images/twitter-1.svg" alt=""></li>
+                <li><h5>English</h5></li>
+                <li><h5>My Page</h5></li>
+                <li><h5>logout</h5></li>
+            </ul>
+        </div>
+        <!-- main logo -->
+        <div class="company-logo">
+            <h2><span>Orange</span> Intelligence</h2>
+        </div>
+            <!-- the hamburger -->
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            <!-- the logo/company name -->
+            </div>
+        </div>
+    </header>
     
 
 
