HEAD CONTENT ALIGN

--- a/index.html
+++ b/index.html
@@ -6,24 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="container">
         <!-- black header contain social icon -->
         <div class="black-head">
             <ul>
-                <li><img src="./images//facebook-brands.svg" alt=""></li>
+                <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
                 <li><img src="./images/twitter-1.svg" alt=""></li>
                 <li><h5>English</h5></li>
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
             </ul>
         </div>
+        <div class="container">
         <!-- main logo -->
+        <div class="main-header-content">
         <div class="company-logo">
             <h2><span>Orange</span> Intelligence</h2>
         </div>
+        <!-- header navbar -->
+        <nav class="nav-bar-desktop">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Program</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
             <!-- the hamburger -->
             <div class="hamburger">
                 <span class="bar"></span>
@@ -31,6 +45,7 @@
                 <span class="bar"></span>
             <!-- the logo/company name -->
             </div>
+        </div>
         </div>
     </header>
     
