--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- black header contain social icon -->
-        <div class="black-head">
+        <!-- <div class="black-head">
             <ul>
                 <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
                 <li><img src="./images/twitter-1.svg" alt=""></li>
@@ -21,22 +21,22 @@
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
             </ul>
-        </div>
-        <div class="container">
+        </div> -->
+        <!-- <div class="container"> -->
         <!-- main logo -->
-        <div class="main-header-content">
+        <!-- <div class="main-header-content">
         <div class="company-logo">
             <h2><span>Orange</span> Intelligence</h2>
-        </div>
+        </div> -->
         <!-- header navbar -->
-        <nav class="nav-bar-desktop">
+        <!-- <nav class="nav-bar-desktop">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </nav>
+        </nav> -->
 
             <!-- the hamburger -->
             <div class="hamburger">
@@ -48,7 +48,147 @@
         </div>
         </div>
     </header>
-    
+    <!-- showcase -->
+    <div class="showcase-mobile">
+        <div class="container-mobile">
+            <h2>"Hello! Creative World"</h2>
+            <h1>SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
+            <div clas="description-mobile-1">
+                <p>Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit.
+                Nobis soluta sunt ex provident placeat 
+                similique eaque animi fugiat et.
+                Voluptates numquam, id dolorem at
+                esse doloremque deserunt magni excepturi!
+            </p>
+            </div>
+            <div class="announcement-mobile-1">
+                <h2>New class starts 2022.04.01(FRI)</h2>
+                <p>Orange Intelligence, MG Road, Bangalore</p>
+            </div>
+        </div>
+    </div>
+    <!-- lecture and curriculumn -->
+    <div class="curriculumn-mobile-grid">
+        <h3>Main Program</h3> <br>
+        <div class="orange-line-mobile">
+            <span class="orange-bar-mobile">
+            </span>
+        </div>
+    <!-- skills details box -->
+        <div class="course-modules-mobile">
+            <div class="html-mobile">
+                <div class="html-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="skill-name-mobile-1">
+                    <h5>HTML-5</h5>
+                </div>
+                <div class="html-details">
+                    <p>Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque voluptate 
+                        ipsum quisquam autem veritatis.</p>
+                </div>
+            </div>
+        
+
+            <div class="css-mobile">
+                <div class="css-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="skill-name-mobile-2">
+                    <h5>CSS-3</h5>
+                </div>
+                <div class="css-details">
+                    <p>Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque voluptate 
+                        ipsum quisquam autem veritatis.</p>
+                </div>
+            </div>
+
+            <div class="javascript-mobile">
+                <div class="javascript-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="skill-name-mobile-3">
+                    <h5>JavaScript</h5>
+                </div>
+                <div class="javaScript-details">
+                    <p>Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque voluptate 
+                        ipsum quisquam autem veritatis.</p>
+                </div>
+            </div>
+
+            <div class="bootstrap-mobile">
+                <div class="bootstrap-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="skill-name-mobile-4">
+                    <h5>Bootstrap</h5>
+                </div>
+                <div class="bootstrap-details">
+                    <p>Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque voluptate 
+                        ipsum quisquam autem veritatis.</p>
+                </div>
+            </div>
+
+            <div class="react-mobile">
+                <div class="react-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="skill-name-mobile-5">
+                    <h5>React jS</h5>
+                </div>
+                <div class="react-details">
+                    <p>Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque voluptate 
+                        ipsum quisquam autem veritatis.</p>
+                </div>
+            </div>
+
+        </div> 
+        <button>Join our april-2022 class</button> 
+    </div>
+    <!-- faculty details -->
+    <section class="trainer-details">
+        <h3>Our Trainers</h3>
+        <div class="orange-line-mobile">
+            <span class="orange-bar-mobile"></span>
+        </div>
+
+        <div class="trainer-1">
+            <div class="trainer-1-image">
+                <img src="" alt="">
+            </div>
+            <div class="trainer-1-details">
+                <h3>Edward Odhiambo</h3>
+                <p class="red-para">Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit.
+                Iste, vero adipisci provident</p> <br> <br>
+                <p>Lorem ipsum dolor sit, amet consectetur 
+                 adipisicing elit. Totam sunt inventore 
+                 asi ratione beatae nesciunt, nobis </p>
+            </div>
+        </div>
+
+        <div class="trainer-2">
+            <div class="trainer-2-image">
+                <img src="" alt="">
+            </div>
+            <div class="trainer-2-details">
+                <h3>Monika Sonam</h3>
+                <p class="red-para">Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit.
+                Iste, vero adipisci provident</p> <br> <br>
+                <p>Lorem ipsum dolor sit, amet consectetur 
+                 adipisicing elit. Totam sunt inventore 
+                 asi ratione beatae nesciunt, nobis </p>
+            </div>
+        </div>
+        <button class="more-button">MORE</button>
+    </section>
 
 
     <script src="script.js"></script>
