STYLE ADD MOBILE PAGE

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
-            <h2>"Hello! Creative World"</h2>
-            <h1>SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
+            <h2 class="orange-text">"Hello! Creative World"</h2>
+            <h1 class="orange-text">SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
             <div clas="description-mobile-1">
                 <p>Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
@@ -63,125 +63,121 @@
             </p>
             </div>
             <div class="announcement-mobile-1">
-                <h2>New class starts 2022.04.01(FRI)</h2>
+                <h2 class="start-date-1">New class starts 2022.04.01(FRI)</h2>
                 <p>Orange Intelligence, MG Road, Bangalore</p>
             </div>
         </div>
     </div>
     <!-- lecture and curriculumn -->
     <div class="curriculumn-mobile-grid">
-        <h3>Main Program</h3> <br>
+        <h2>Main Program</h2>
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile">
             </span>
         </div>
     <!-- skills details box -->
         <div class="course-modules-mobile">
-            <div class="html-mobile">
+            <div class="html-mobile box-flex">
                 <div class="html-logo">
-                    <img src="" alt="">
+                    <img src="./images/js.png" width = 20 height = 20 alt="">
                 </div>
-                <div class="skill-name-mobile-1">
-                    <h5>HTML-5</h5>
+                <div class="skill-name-mobile">
+                    <h4 class="orange-text">HTML-5</h4>
                 </div>
                 <div class="html-details">
-                    <p>Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque voluptate 
-                        ipsum quisquam autem veritatis.</p>
+                    <p class=" white-text">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
         
 
-            <div class="css-mobile">
-                <div class="css-logo">
-                    <img src="" alt="">
+            <div class="css-mobile box-flex">
+                <div class="html-logo">
+                    <img src="./images/js.png" width = 20 height = 20 alt="">
                 </div>
-                <div class="skill-name-mobile-2">
-                    <h5>CSS-3</h5>
+                <div class="skill-name-mobile">
+                    <h4 class="orange-text">CSS-3</h4>
                 </div>
                 <div class="css-details">
-                    <p>Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque voluptate 
-                        ipsum quisquam autem veritatis.</p>
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
-            <div class="javascript-mobile">
-                <div class="javascript-logo">
-                    <img src="" alt="">
+            <div class="javascript-mobile box-flex">
+                <div class="html-logo">
+                    <img src="./images/js.png" width = 20 height = 20 alt="">
                 </div>
-                <div class="skill-name-mobile-3">
-                    <h5>JavaScript</h5>
+                <div class="skill-name-mobile">
+                    <h4 class="orange-text">JavaScript</h4>
                 </div>
                 <div class="javaScript-details">
-                    <p>Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque voluptate 
-                        ipsum quisquam autem veritatis.</p>
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque .</p>
                 </div>
             </div>
 
-            <div class="bootstrap-mobile">
-                <div class="bootstrap-logo">
-                    <img src="" alt="">
+            <div class="bootstrap-mobile box-flex">
+                <div class="html-logo">
+                    <img src="./images/js.png" width = 20 height = 20 alt="">
                 </div>
-                <div class="skill-name-mobile-4">
-                    <h5>Bootstrap</h5>
+                <div class="skill-name-mobile">
+                    <h4 class="orange-text">Bootstrap</h4>
                 </div>
                 <div class="bootstrap-details">
-                    <p>Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque voluptate 
-                        ipsum quisquam autem veritatis.</p>
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque.</p>
                 </div>
             </div>
 
-            <div class="react-mobile">
-                <div class="react-logo">
-                    <img src="" alt="">
+            <div class="react-mobile box-flex">
+                <div class="html-logo">
+                    <img src="./images/js.png" width = 20 height = 20 alt="">
                 </div>
-                <div class="skill-name-mobile-5">
-                    <h5>React jS</h5>
+                <div class="skill-name-mobile">
+                    <h4 class="orange-text">React jS</h4>
                 </div>
                 <div class="react-details">
-                    <p>Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque voluptate 
-                        ipsum quisquam autem veritatis.</p>
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
         </div> 
-        <button>Join our april-2022 class</button> 
+            <button class="join-class-button">Join our april-2022 class</button>
     </div>
     <!-- faculty details -->
     <section class="trainer-details">
-        <h3>Our Trainers</h3>
+        <h2 class="text-center">Our Experts</h2>
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile"></span>
         </div>
+        <br>
 
         <div class="trainer-1">
             <div class="trainer-1-image">
-                <img src="" alt="">
+                <img src="./images/teacher-1.png" width = 120 height = 120 alt="">
             </div>
             <div class="trainer-1-details">
-                <h3>Edward Odhiambo</h3>
+                <h3>Yochai Benkler</h3>
                 <p class="red-para">Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
-                Iste, vero adipisci provident</p> <br> <br>
+                Iste, vero adipisci provident</p>
                 <p>Lorem ipsum dolor sit, amet consectetur 
                  adipisicing elit. Totam sunt inventore 
                  asi ratione beatae nesciunt, nobis </p>
             </div>
         </div>
 
-        <div class="trainer-2">
-            <div class="trainer-2-image">
-                <img src="" alt="">
+        <div class="trainer-1">
+            <div class="trainer-1-image">
+                <img src="./images/teacher-2.jpg" width = 120 height = 120 alt="">
             </div>
             <div class="trainer-2-details">
-                <h3>Monika Sonam</h3>
+                <h3>SohYeong Noh</h3>
                 <p class="red-para">Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
-                Iste, vero adipisci provident</p> <br> <br>
+                Iste, vero adipisci provident</p>
                 <p>Lorem ipsum dolor sit, amet consectetur 
                  adipisicing elit. Totam sunt inventore 
                  asi ratione beatae nesciunt, nobis </p>
