LINTER ERROR FIX

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,15 +45,15 @@
                 <span class="bar"></span>
             <!-- the logo/company name -->
             </div>
-        </div>
-        </div>
+        <!-- </div> -->
+        <!-- </div> -->
     </header>
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
             <h3 class="text-center orange-text">"Hello! Creative World"</h3>
             <h2 class="text-center orange-text">SCHOOL OF CREATIVE WEB DESIGN 2022</h2>
-            <div clas="description-mobile-2 center-align">
+            <div class="description-mobile-2 center-align">
                 <p class="text-center white-back">Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
                 Nobis soluta sunt ex provident placeat 
@@ -93,6 +93,7 @@
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile">
             </span>
+        </div>
             <p>Lorem ipsum dolor sit amet consectetur 
                 adipisicing elitAb maiores architecto
             </p>
@@ -100,9 +101,7 @@
             <img src="" alt="">
     </section>
 
-    <section class="our-partners">
-        <img src="" alt="">
-    </section>
+    <img src="" alt="">
 
     <footer>
         <div><span>Orange</span> Intelligence</div>
