--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,15 +45,15 @@
                 <span class="bar"></span>
             <!-- the logo/company name -->
             </div>
-        </div>
-        </div>
+        <!-- </div>
+        </div> -->
     </header>
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
             <h2 class="orange-text">"Hello! Creative World"</h2>
             <h1 class="orange-text">SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
-            <div clas="description-mobile-1">
+            <div class="description-mobile-1">
                 <p>Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
                 Nobis soluta sunt ex provident placeat 
@@ -144,7 +144,7 @@
             </div>
 
         </div> 
-            <button class="join-class-button">Join our april-2022 class</button>
+            <button class="join-class-button" type="button">Join our april-2022 class</button>
     </div>
     <!-- faculty details -->
     <section class="trainer-details">
@@ -183,7 +183,7 @@
                  asi ratione beatae nesciunt, nobis </p>
             </div>
         </div>
-        <button class="more-button">MORE</button>
+        <button class="more-button" type="button">MORE</button>
     </section>
 
 
