THE DESKTOP VERSION

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- black header contain social icon -->
-        <!-- <div class="black-head">
+        <div class="black-head">
             <ul>
                 <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
                 <li><img src="./images/twitter-1.svg" alt=""></li>
@@ -21,38 +21,37 @@
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
             </ul>
-        </div> -->
-        <!-- <div class="container"> -->
+        </div>
+        <div class="container">
         <!-- main logo -->
-        <!-- <div class="main-header-content">
-        <div class="company-logo">
-            <h2><span>Orange</span> Intelligence</h2>
-        </div> -->
+        <div class="main-header-content">
+        <div class="main-logo">
+            <h2><span class="main-logo-body">Orange</span> Intelligence</h2>
+        </div>
         <!-- header navbar -->
-        <!-- <nav class="nav-bar-desktop">
+         <nav class="nav-bar-desktop">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </nav> -->
+        </nav>
 
             <!-- the hamburger -->
-            <div class="hamburger">
+            <div id="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            <!-- the logo/company name -->
             </div>
-        <!-- </div> -->
-        <!-- </div> -->
+        </div>
+        </div>
     </header>
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
             <h3 class="text-center orange-text">"Hello! Creative World"</h3>
-            <h2 class="text-center orange-text">SCHOOL OF CREATIVE WEB DESIGN 2022</h2>
+            <h2 class="text-center orange-text second-heading">SCHOOL OF CREATIVE WEB DESIGN 2022</h2>
             <div class="description-mobile-2 center-align">
                 <p class="text-center white-back">Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
@@ -61,9 +60,7 @@
                 Voluptates numquam, id dolorem at
                 esse doloremque deserunt magni excepturi!
                 Lorem, ipsum dolor sit amet consectetur adipisicing 
-                elit. Recusandae eius dolor culpa et consequatur 
-                consectetur deleniti iusto minus maxime assumenda. 
-                Optio nihil obcaecati.
+                elit. Recusandae eius dolor.
             </p>
             </div>
             <div class="announcement-mobile-2 text-center">
@@ -73,8 +70,8 @@
         </div>
     </div>
 
-    <div class="box-1 center-align">
-        <h2>Learn Mordern, creative Web Design</h2>
+    <div class="box-1 text-center">
+        <h2>Learn Mordern creative <br> Web Design</h2>
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile">
             </span>
@@ -85,27 +82,31 @@
     </div>
 
     <div class="box-2">
-        <h2><span>Orange</span> intelligence</h2>
+        <h2 class="text-center"><span class="main-logo-body">Orange</span> intelligence</h2>
     </div>
 
     <section class="previous-class">
-        <h3>Know about our previous classes</h3>
+        <h3 class="text-center">Know about our previous classes</h3>
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile">
             </span>
         </div>
-            <p>Lorem ipsum dolor sit amet consectetur 
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur 
                 adipisicing elitAb maiores architecto
             </p>
-            <img src="" alt="">
-            <img src="" alt="">
-    </section>
+         <div class = "blurr-img"><img src="./images/graduates-1.jpg" width = 99% height = 300 alt="student-img"></div>  
 
-    <img src="" alt="">
+            <div class = "blurr-img"><img src="./images/batch-2.png" width = 99% height = 300 alt="student-img"></div>
+    </section>
+    <br><br>
+
+    <img src="./images/Partners.jpg" width = 99% height = 400 alt="partners-img">
 
     <footer>
-        <div><span>Orange</span> Intelligence</div>
-        <p>Orange Intelligence, copyright &copy; 2022</p>
+        <div class="footer-content">
+        <p><span class="main-logo-body">Orange</span> Intelligence</p> 
+        <p>Orange Intelligence, copyright &copy; 2022 India</p>
+        </div>
     </footer>
     </body>
     </html>
