--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <!-- black header contain social icon -->
-        <!-- <div class="black-head">
+        <!-- black header contain social icon  -->
+        <div class="black-head">
             <ul>
                 <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
                 <li><img src="./images/twitter-1.svg" alt=""></li>
@@ -21,32 +21,31 @@
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
             </ul>
-        </div> -->
-        <!-- <div class="container"> -->
+        </div>
+        <div class="container">
         <!-- main logo -->
-        <!-- <div class="main-header-content">
-        <div class="company-logo">
-            <h2><span>Orange</span> Intelligence</h2>
-        </div> -->
+        <div class="main-header-content">
+        <div class="main-logo">
+            <h2><span class="main-logo-body">Orange</span> Intelligence</h2>
+        </div> 
         <!-- header navbar -->
-        <!-- <nav class="nav-bar-desktop">
+        <nav class="nav-bar-desktop">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </nav> -->
+        </nav>
 
             <!-- the hamburger -->
-            <div class="hamburger">
+            <div id="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            <!-- the logo/company name -->
             </div>
-        <!-- </div>
-        </div> -->
+        </div>
+        </div>
     </header>
     <!-- showcase -->
     <div class="showcase-mobile">
