DESKTOP VERSION STYLE ADD

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- black header contain social icon  -->
         <div class="black-head">
             <ul>
-                <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
-                <li><img src="./images/twitter-1.svg" alt=""></li>
+                <li><img src="./images/Linkedin-icon.svg" width = 12 height = 12 alt=""></li>
+                <li><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></li>
                 <li><h5>English</h5></li>
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
@@ -38,6 +38,8 @@
             </ul>
         </nav>
 
+        <button class = "header-button-1" type="button">CC Campaign</button>
+
             <!-- the hamburger -->
             <div id="hamburger">
                 <span class="bar"></span>
@@ -51,7 +53,7 @@
     <div class="showcase-mobile">
         <div class="container-mobile">
             <h2 class="orange-text">"Hello! Creative World"</h2>
-            <h1 class="orange-text">SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
+            <h1 class="orange-text width-half">SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
             <div class="description-mobile-1">
                 <p>Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
@@ -63,7 +65,7 @@
             </div>
             <div class="announcement-mobile-1">
                 <h2 class="start-date-1">New class starts 2022.04.01(FRI)</h2>
-                <p>Orange Intelligence, MG Road, Bangalore</p>
+                <p class="location-1">Orange Intelligence, MG Road, Bangalore</p>
             </div>
         </div>
     </div>
@@ -84,7 +86,7 @@
                     <h4 class="orange-text">HTML-5</h4>
                 </div>
                 <div class="html-details">
-                    <p class=" white-text">Lorem ipsum dolor sit, amet consectetur 
+                    <p class=" white-text text-center">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
@@ -98,7 +100,7 @@
                     <h4 class="orange-text">CSS-3</h4>
                 </div>
                 <div class="css-details">
-                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
@@ -111,8 +113,8 @@
                     <h4 class="orange-text">JavaScript</h4>
                 </div>
                 <div class="javaScript-details">
-                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque atque .</p>
+                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
@@ -124,8 +126,8 @@
                     <h4 class="orange-text">Bootstrap</h4>
                 </div>
                 <div class="bootstrap-details">
-                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Eaque.</p>
+                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
@@ -137,7 +139,7 @@
                     <h4 class="orange-text">React jS</h4>
                 </div>
                 <div class="react-details">
-                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
