ADD ARRAY OF OBJ

--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
         <!-- black header contain social icon -->
         <div class="black-head">
             <ul>
-                <li><img src="./images/Linkedin-icon.svg" width = 25 height = 25 alt=""></li>
-                <li><img src="./images/twitter-1.svg" alt=""></li>
+                <li><img src="./images/Linkedin-icon.svg" width = 12 height = 12 alt=""></li>
+                <li><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></li>
                 <li><h5>English</h5></li>
                 <li><h5>My Page</h5></li>
                 <li><h5>logout</h5></li>
@@ -37,7 +37,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-
+        <button class = "header-button-1" type="button">CC Campaign</button>
             <!-- the hamburger -->
             <div id="hamburger">
                 <span class="bar"></span>
@@ -50,7 +50,7 @@
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
-            <h3 class="text-center orange-text">"Hello! Creative World"</h3>
+            <h2 class="text-center orange-text">"Hello! Creative World"</h2>
             <h2 class="text-center orange-text second-heading">SCHOOL OF CREATIVE WEB DESIGN 2022</h2>
             <div class="description-mobile-2 center-align">
                 <p class="text-center white-back">Lorem ipsum dolor sit amet 
