--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
         </div> 
             <button class="join-class-button" type="button">Join our april-2022 class</button>
+            <h5 class="see-whole-program">see whole program</h5>
     </div>
     <!-- faculty details -->
     <section class="trainer-details">
@@ -185,6 +186,7 @@
             </div>
         </div>
         <button class="more-button" type="button">MORE</button>
+        <div class="image-grig"></div>
     </section>
 
 
