THE MOBILE POPUP

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
+            <div id="pop-up-mobile-window"></div>
         </div>
         </div>
     </header>
