--- a/about.html
+++ b/about.html
@@ -26,15 +26,15 @@
         <!-- main logo -->
         <div class="main-header-content">
         <div class="main-logo">
-            <h2><span class="main-logo-body">Orange</span> Intelligence</h2>
+           <a href="index.html"><img class="main-logo-body" src="./images/Orange-I-logo.jpg" width = 100 height = 70 alt=""></a>
         </div>
         <!-- header navbar -->
          <nav class="nav-bar-desktop">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Program</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Program</a></li>
+                <li><a href="about.html">Contact</a></li>
             </ul>
         </nav>
         <button class = "header-button-1" type="button">CC Campaign</button>
@@ -44,13 +44,15 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
+            <div id="pop-up-mobile-window"></div>
         </div>
         </div>
     </header>
     <!-- showcase -->
+
     <div class="showcase-mobile">
         <div class="container-mobile">
-            <h2 class="text-center orange-text">"Hello! Creative World"</h2>
+            <h2 class="text-center orange-text no-display-text">"Hello! Creative World"</h2>
             <h2 class="text-center orange-text second-heading">SCHOOL OF CREATIVE WEB DESIGN 2022</h2>
             <div class="description-mobile-2 center-align">
                 <p class="text-center white-back">Lorem ipsum dolor sit amet 
@@ -78,11 +80,14 @@
         </div>
         <p>Lorem ipsum dolor sit amet, 
         consectetur adipisicing elit.
-        Repellat expedita illo et aliquid </p>
+        Repellat expedita illo et aliquid Cupidatat
+         veniam officia laboris elit aliquip.Ullamco dolor id fugiat
+         sunt cupidatat culpa pariatur.</p>
     </div>
 
     <div class="box-2">
-        <h2 class="text-center"><span class="main-logo-body">Orange</span> intelligence</h2>
+        
+        <img src="./images/Orange-I-logo.jpg" width = 100% height= 290 alt="">
     </div>
 
     <section class="previous-class">
@@ -94,9 +99,10 @@
             <p class="text-center">Lorem ipsum dolor sit amet consectetur 
                 adipisicing elitAb maiores architecto
             </p>
-         <div class = "blurr-img"><img src="./images/graduates-1.jpg" width = 99% height = 300 alt="student-img"></div>  
-
-            <div class = "blurr-img"><img src="./images/batch-2.png" width = 99% height = 300 alt="student-img"></div>
+         <div class = "blurr-img">
+             <img src="./images/graduates-1.jpg" width = 400 height = 200 alt="student-img"> 
+            <img src="./images/batch-2.png" width = 400 height = 200 alt="student-img">
+        </div>
     </section>
     <br><br>
 
@@ -108,5 +114,6 @@
         <p>Orange Intelligence, copyright &copy; 2022 India</p>
         </div>
     </footer>
+    <script src="script.js"></script>
     </body>
     </html>
