--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <!-- main logo -->
         <div class="main-header-content">
         <div class="main-logo">
-            <h2><span class="main-logo-body">Orange</span> Intelligence</h2>
+           <a href="index.html"><img class="main-logo-body" src="./images/Orange-I-logo.jpg" width = 100 height = 70 alt=""></a> 
         </div> 
         <!-- header navbar -->
         <nav class="nav-bar-desktop">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Program</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Program</a></li>
+                <li><a href="about.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -53,8 +53,8 @@
     <!-- showcase -->
     <div class="showcase-mobile">
         <div class="container-mobile">
-            <h2 class="orange-text">"Hello! Creative World"</h2>
-            <h1 class="orange-text width-half">SCHOOL OF CREATIVE WEB DESIGN 2022</h1>
+            <h2 class="orange-text hello-text">"Hello! Creative World"</h2>
+            <h1 class="orange-text width-half">SCHOOL OF CREATIVE <br>  WEB DESIGN <br> 2022</h1>
             <div class="description-mobile-1">
                 <p>Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit.
@@ -189,8 +189,12 @@
         <button class="more-button" type="button">MORE</button>
         <div class="image-grig"></div>
     </section>
-
-
+    <footer>
+        <div class="footer-content">
+        <p><span class="main-logo-body">Orange</span> Intelligence</p> 
+        <p>Orange Intelligence, copyright &copy; 2022 India</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
