--- a/about.html
+++ b/about.html
@@ -100,20 +100,21 @@
                 adipisicing elitAb maiores architecto
             </p>
          <div class = "blurr-img">
-             <img src="./images/graduates-1.jpg" width = 400 height = 200 alt="student-img"> 
-            <img src="./images/batch-2.png" width = 400 height = 200 alt="student-img">
+             <img src="./images/graduates-1.jpg" alt="student-img"> 
+            <img src="./images/batch-2.png" alt="student-img">
         </div>
     </section>
     <br><br>
 
-    <img src="./images/Partners.jpg" width = 99% height = 400 alt="partners-img">
+    <div class="image-partner-mob"><img class = "partner-image-set2" src="./images/Partners -1.jpg" alt=""></div>
 
-    <footer>
+    <footer class="about-footer">
         <div class="footer-content">
         <p><span class="main-logo-body">Orange</span> Intelligence</p> 
         <p>Orange Intelligence, copyright &copy; 2022 India</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="script.js"></script> -->
     </body>
     </html>
