--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
         <button class="more-button" type="button">MORE</button>
         <div class="image-grig"></div>
     </section>
-    <footer>
+    <div class="partner-image-template"></div>
+    <footer class="footer-1">
         <div class="footer-content">
         <p><span class="main-logo-body">Orange</span> Intelligence</p> 
         <p>Orange Intelligence, copyright &copy; 2022 India</p>
